--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -165,6 +165,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\ArrayProperty.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ConfigService.cpp"
 				>
 			</File>
@@ -201,6 +205,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SingletonHolder.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SupportBasic.cpp"
 				>
 			</File>
@@ -219,6 +227,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\inc\MantidKernel\ArrayProperty.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidKernel\BoundedValidator.h"
 				>
 			</File>
@@ -228,6 +240,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidKernel\cow_ptr.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidKernel\DllExport.h"
 				>
 			</File>
 			<File
@@ -291,11 +307,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidKernel\Support.h"
+				RelativePath=".\inc\MantidKernel\SingletonHolder.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidKernel\SupportBasic.h"
+				RelativePath=".\inc\MantidKernel\Support.h"
 				>
 			</File>
 			<File
