re #88 Move seeting of errorHelper to LoadRaw

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -276,6 +276,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\SimpleRebinTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\TOFtoWavelength.h"
 				>
 			</File>
