--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ConvertUnits.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Divide.cpp"
 				>
 			</File>
@@ -195,10 +199,6 @@
 			</File>
 			<File
 				RelativePath=".\src\SimpleRebin.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\TOFtoWavelength.cpp"
 				>
 			</File>
 		</Filter>
@@ -228,6 +228,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\ConvertUnits.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\Divide.h"
 				>
 			</File>
@@ -252,10 +256,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidAlgorithms\PhysicalConstants.h"
-				>
-			</File>
-			<File
 				RelativePath=".\inc\MantidAlgorithms\Plus.h"
 				>
 			</File>
@@ -277,10 +277,6 @@
 			</File>
 			<File
 				RelativePath=".\test\SimpleRebinTest.h"
-				>
-			</File>
-			<File
-				RelativePath=".\inc\MantidAlgorithms\TOFtoWavelength.h"
 				>
 			</File>
 			<File
