--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -388,11 +388,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\AuxException.h"
+				RelativePath=".\auxinc\AuxException.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\AuxException.h"
+				RelativePath=".\Deprecated\inc\AuxException.h"
 				>
 			</File>
 			<File
@@ -476,11 +476,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
@@ -528,11 +528,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\Deprecated\inc\RotCounter.h"
 				>
 			</File>
 			<File
@@ -560,6 +560,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\testAlgebra.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\testCompAssembly.h"
 				>
 			</File>
@@ -580,7 +584,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\testObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\testPoly.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\testQuat.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\testSurface.h"
 				>
 			</File>
 			<File
@@ -608,11 +624,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLattribute.h"
+				RelativePath=".\auxinc\XMLattribute.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLattribute.h"
+				RelativePath=".\Deprecated\inc\XMLattribute.h"
 				>
 			</File>
 			<File
@@ -624,11 +640,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLcomment.h"
+				RelativePath=".\auxinc\XMLcomment.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLcomment.h"
+				RelativePath=".\Deprecated\inc\XMLcomment.h"
 				>
 			</File>
 			<File
@@ -664,11 +680,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLindex.h"
+				RelativePath=".\Deprecated\inc\XMLindex.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLindex.h"
+				RelativePath=".\auxinc\XMLindex.h"
 				>
 			</File>
 			<File
@@ -688,11 +704,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLpath.h"
+				RelativePath=".\auxinc\XMLpath.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLpath.h"
+				RelativePath=".\Deprecated\inc\XMLpath.h"
 				>
 			</File>
 			<File
