re #64 Added testCylinder.h as an example of what the unit tests for a geometry class should be like.  Removed the Cylinder test from testSurface.h.
Some tests fail, although this points to a bug in DistanceTrue so I will leave them in as we need to fix the underlying bug.

--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -572,6 +572,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\testCynlinder.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\testDetector.h"
 				>
 			</File>
@@ -640,11 +644,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLcomment.h"
+				RelativePath=".\Deprecated\inc\XMLcomment.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLcomment.h"
+				RelativePath=".\auxinc\XMLcomment.h"
 				>
 			</File>
 			<File
@@ -688,11 +692,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLnamespace.h"
+				RelativePath=".\auxinc\XMLnamespace.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLnamespace.h"
+				RelativePath=".\Deprecated\inc\XMLnamespace.h"
 				>
 			</File>
 			<File
@@ -712,11 +716,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLread.h"
+				RelativePath=".\Deprecated\inc\XMLread.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLread.h"
+				RelativePath=".\auxinc\XMLread.h"
 				>
 			</File>
 			<File
