Forgot to remove debug print messages. Refs #81

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -159,6 +159,8 @@ while(len(dirpath)):
 				dirpath.append(fullPath[3:])
 	except:
 		pass
+		
+MantidBuild.collectIncludes('.', 'includes')
 
 libDirList.append(os.path.abspath('./Bin/Shared'))
 
