--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -159,8 +159,9 @@ while(len(dirpath)):
 				dirpath.append(fullPath[3:])
 	except:
 		pass
-		
-MantidBuild.collectIncludes('.', 'includes')
+
+if os.name != 'nt':
+	MantidBuild.collectIncludes('.', 'includes')
 
 libDirList.append(os.path.abspath('./Bin/Shared'))
 
