re #64 Fix some of the geometry tests, and reinsert some code that was carelessly wiped in an update by an unnamed developer

--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -392,11 +392,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\AuxException.h"
+				RelativePath=".\auxinc\AuxException.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\AuxException.h"
+				RelativePath=".\Deprecated\inc\AuxException.h"
 				>
 			</File>
 			<File
@@ -484,11 +484,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\Matrix.h"
 				>
 			</File>
 			<File
@@ -616,10 +616,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\test\testV3D.h"
-				>
-			</File>
-			<File
 				RelativePath=".\inc\Torus.h"
 				>
 			</File>
@@ -636,11 +632,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\Vec3D.h"
+				RelativePath=".\test\V3DTest.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLattribute.h"
+				RelativePath=".\Deprecated\inc\Vec3D.h"
 				>
 			</File>
 			<File
@@ -648,11 +644,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLcollect.h"
+				RelativePath=".\Deprecated\inc\XMLattribute.h"
 				>
 			</File>
 			<File
 				RelativePath=".\auxinc\XMLcollect.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\inc\XMLcollect.h"
 				>
 			</File>
 			<File
@@ -664,19 +664,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLcomp.h"
-				>
-			</File>
-			<File
 				RelativePath=".\auxinc\XMLcomp.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLgrid.h"
+				RelativePath=".\Deprecated\inc\XMLcomp.h"
 				>
 			</File>
 			<File
 				RelativePath=".\Deprecated\inc\XMLgrid.h"
+				>
+			</File>
+			<File
+				RelativePath=".\auxinc\XMLgrid.h"
 				>
 			</File>
 			<File
@@ -688,19 +688,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLgroup.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Deprecated\inc\XMLgroup.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLindex.h"
+				RelativePath=".\auxinc\XMLgroup.h"
 				>
 			</File>
 			<File
 				RelativePath=".\auxinc\XMLindex.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\inc\XMLindex.h"
 				>
 			</File>
 			<File
@@ -712,19 +712,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLobject.h"
-				>
-			</File>
-			<File
 				RelativePath=".\auxinc\XMLobject.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLpath.h"
+				RelativePath=".\Deprecated\inc\XMLobject.h"
 				>
 			</File>
 			<File
 				RelativePath=".\Deprecated\inc\XMLpath.h"
+				>
+			</File>
+			<File
+				RelativePath=".\auxinc\XMLpath.h"
 				>
 			</File>
 			<File
@@ -740,11 +740,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLvector.h"
+				RelativePath=".\auxinc\XMLvector.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLvector.h"
+				RelativePath=".\Deprecated\inc\XMLvector.h"
 				>
 			</File>
 		</Filter>
